@@ -4,9 +4,29 @@
 
 package me.lokka30.levelledmobs;
 
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.io.InvalidObjectException;
+import java.time.Duration;
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.Iterator;
+import java.util.LinkedList;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.UUID;
+import java.util.WeakHashMap;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import me.lokka30.levelledmobs.commands.LevelledMobsCommand;
 import me.lokka30.levelledmobs.compatibility.Compat1_16;
 import me.lokka30.levelledmobs.compatibility.Compat1_17;
+import me.lokka30.levelledmobs.compatibility.Compat1_19;
 import me.lokka30.levelledmobs.customdrops.CustomDropsHandler;
 import me.lokka30.levelledmobs.listeners.BlockPlaceListener;
 import me.lokka30.levelledmobs.listeners.ChunkLoadListener;
@@ -24,15 +44,17 @@ import me.lokka30.levelledmobs.listeners.PlayerDeathListener;
 import me.lokka30.levelledmobs.listeners.PlayerInteractEventListener;
 import me.lokka30.levelledmobs.listeners.PlayerJoinListener;
 import me.lokka30.levelledmobs.listeners.PlayerPortalEventListener;
+import me.lokka30.levelledmobs.listeners.ServerStartListener;
 import me.lokka30.levelledmobs.managers.ExternalCompatibilityManager;
 import me.lokka30.levelledmobs.managers.LevelManager;
 import me.lokka30.levelledmobs.managers.PlaceholderApiIntegration;
+import me.lokka30.levelledmobs.misc.ChunkKillInfo;
 import me.lokka30.levelledmobs.misc.DebugType;
 import me.lokka30.levelledmobs.misc.FileLoader;
 import me.lokka30.levelledmobs.misc.FileMigrator;
-import me.lokka30.levelledmobs.misc.Utils;
 import me.lokka30.levelledmobs.misc.VersionInfo;
 import me.lokka30.levelledmobs.rules.MetricsInfo;
+import me.lokka30.levelledmobs.util.Utils;
 import me.lokka30.microlib.exceptions.OutdatedServerVersionException;
 import me.lokka30.microlib.other.UpdateChecker;
 import me.lokka30.microlib.other.VersionUtils;
@@ -46,26 +68,10 @@ import org.bukkit.configuration.file.YamlConfiguration;
 import org.bukkit.entity.EntityType;
 import org.bukkit.entity.Player;
 import org.bukkit.plugin.PluginManager;
+import org.bukkit.scheduler.BukkitRunnable;
+import org.bukkit.scheduler.BukkitTask;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.io.InvalidObjectException;
-import java.time.Instant;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.UUID;
-import java.util.WeakHashMap;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 /**
  * This class contains methods used by the main class.
@@ -85,125 +91,132 @@ public class Companion {
         this.updateResult = new LinkedList<>();
         buildUniversalGroups();
         this.metricsInfo = new MetricsInfo(main);
-        this.spawner_CopyIds = new LinkedList<>();
-        this.spawner_InfoIds = new LinkedList<>();
+        this.spawnerCopyIds = new LinkedList<>();
+        this.spawnerInfoIds = new LinkedList<>();
         this.debugsEnabled = new LinkedList<>();
+        this.entityDeathInChunkCounter = new HashMap<>();
+        this.chunkKillNoticationTracker = new HashMap<>();
+        this.externalCompatibilityManager = new ExternalCompatibilityManager();
     }
 
     final private WeakHashMap<Player, Instant> recentlyJoinedPlayers;
-    public HashSet<EntityType> groups_HostileMobs;
-    public HashSet<EntityType> groups_AquaticMobs;
-    public HashSet<EntityType> groups_PassiveMobs;
+    public HashSet<EntityType> hostileMobsGroup;
+    public HashSet<EntityType> aquaticMobsGroup;
+    public HashSet<EntityType> passiveMobsGroup;
     public List<String> updateResult;
+    private boolean hadRulesLoadError;
+    public boolean useAdventure;
+    final private HashMap<Long, Map<EntityType, ChunkKillInfo>> entityDeathInChunkCounter;
+    final private HashMap<Long, Map<UUID, Instant>> chunkKillNoticationTracker;
     final public Map<Player, Location> playerNetherPortals;
     final public Map<Player, Location> playerWorldPortals;
-    final public List<UUID> spawner_CopyIds;
-    final public List<UUID> spawner_InfoIds;
+    final public List<UUID> spawnerCopyIds;
+    final public List<UUID> spawnerInfoIds;
     final public List<DebugType> debugsEnabled;
     final private PluginManager pluginManager = Bukkit.getPluginManager();
     final private MetricsInfo metricsInfo;
-    final static private Object playerLogonTimes_Lock = new Object();
-    final static private Object playerNetherPortals_Lock = new Object();
+    final public ExternalCompatibilityManager externalCompatibilityManager;
+    private BukkitTask hashMapCleanUp;
+    final static private Object playerLogonTimesLock = new Object();
+    final static private Object playerNetherPortalsLock = new Object();
+    final static private Object entityDeathInChunkCounterLock = new Object();
+    final static private Object entityDeathInChunkNotifierLock = new Object();
 
-    //Checks if the server version is supported
-    public void checkCompatibility() {
-        Utils.logger.info("&fCompatibility Checker: &7Checking compatibility with your server...");
-
-        // Using a List system in case more compatibility checks are added.
-        final List<String> incompatibilities = new LinkedList<>();
-
-        // Check the MC version of the server.
-        if (!VersionUtils.isOneFourteen()) {
-            incompatibilities.add("Your server version &8(&b" + Bukkit.getVersion() + "&8)&7 is unsupported by &bLevelledMobs v" + main.getDescription().getVersion() + "&7!" +
-                    "Compatible MC versions: &b" + String.join("&7,&b ", Utils.getSupportedServerVersions()) + "&7.");
-        }
-
-        if (!ExternalCompatibilityManager.hasProtocolLibInstalled()) {
-            incompatibilities.add("Your server does not have &bProtocolLib&7 installed! This means that no levelled nametags will appear on the mobs. If you wish to see custom nametags above levelled mobs, then you must install ProtocolLib.");
-        }
-
-        main.incompatibilitiesAmount = incompatibilities.size();
-        if (incompatibilities.isEmpty())
-            Utils.logger.info("&fCompatibility Checker: &7No incompatibilities found.");
-        else {
-            Utils.logger.warning("&fCompatibility Checker: &7Found the following possible incompatibilities:");
-            incompatibilities.forEach(incompatibility -> Utils.logger.info("&8 - &7" + incompatibility));
-        }
+    public boolean getHadRulesLoadError() {
+        return this.hadRulesLoadError;
     }
 
-    private int getSettingsVersion(){
+    private int getSettingsVersion() {
         final File file = new File(main.getDataFolder(), "settings.yml");
-        if (!file.exists()) return 0;
+        if (!file.exists()) {
+            return 0;
+        }
 
         final YamlConfiguration cfg = YamlConfiguration.loadConfiguration(file);
-        return main.helperSettings.getInt(cfg,"file-version");
+        return main.helperSettings.getInt(cfg, "file-version");
     }
 
     // Note: also called by the reload subcommand.
     boolean loadFiles(final boolean isReload) {
         Utils.logger.info("&fFile Loader: &7Loading files...");
 
-        // save license.txt
-        FileLoader.saveResourceIfNotExists(main, new File(main.getDataFolder(), "license.txt"));
-
-        main.rulesParsingManager.parseRulesMain(FileLoader.loadFile(main, "rules", FileLoader.RULES_FILE_VERSION));
+        final YamlConfiguration rulesFile = FileLoader.loadFile(main, "rules",
+            FileLoader.RULES_FILE_VERSION);
+        this.hadRulesLoadError = rulesFile == null;
+        main.rulesParsingManager.parseRulesMain(rulesFile);
 
         main.configUtils.playerLevellingEnabled = main.rulesManager.isPlayerLevellingEnabled();
 
         final int settingsVersion = getSettingsVersion();
-        if (settingsVersion > 20 && settingsVersion < 30) { // anything older than 2.0 will not be migrated
+        if (settingsVersion > 20
+            && settingsVersion < 30) { // anything older than 2.0 will not be migrated
             FileMigrator.migrateSettingsToRules(main);
         }
 
         main.settingsCfg = FileLoader.loadFile(main, "settings", FileLoader.SETTINGS_FILE_VERSION);
 
         if (main.settingsCfg != null) // only load if settings were loaded successfully
-            main.messagesCfg = FileLoader.loadFile(main, "messages", FileLoader.MESSAGES_FILE_VERSION);
-        else {
+        {
+            main.messagesCfg = FileLoader.loadFile(main, "messages",
+                FileLoader.MESSAGES_FILE_VERSION);
+        } else {
             // had an issue reading the file.  Disable the plugin now
             return false;
         }
 
         main.customDropsHandler = new CustomDropsHandler(main);
-        main.customDropsHandler.customDropsParser.loadDrops(
-                FileLoader.loadFile(main, "customdrops", FileLoader.CUSTOMDROPS_FILE_VERSION)
-        );
 
         if (!isReload) {
             main.attributesCfg = loadEmbeddedResource("defaultAttributes.yml");
             main.dropsCfg = loadEmbeddedResource("defaultDrops.yml");
-            main.mobHeadManager.loadTextures(Objects.requireNonNull(loadEmbeddedResource("textures.yml")));
+            main.mobHeadManager.loadTextures(
+                Objects.requireNonNull(loadEmbeddedResource("textures.yml")));
 
             // remove legacy files if they exist
             final String[] legacyFile = {"attributes.yml", "drops.yml"};
             for (final String lFile : legacyFile) {
                 final File delFile = new File(main.getDataFolder(), lFile);
                 try {
-                    if (delFile.exists()) //noinspection ResultOfMethodCallIgnored
+                    if (delFile.exists()) {
+                        //noinspection ResultOfMethodCallIgnored
                         delFile.delete();
+                    }
                 } catch (final Exception e) {
                     Utils.logger.warning("Unable to delete file " + lFile + ", " + e.getMessage());
                 }
             }
 
+        } else {
+            // if not reloading then it is called from the server load event to make sure any dependent
+            // plugins are already loaded
+            main.customDropsHandler.customDropsParser.loadDrops(
+                FileLoader.loadFile(main, "customdrops", FileLoader.CUSTOMDROPS_FILE_VERSION)
+            );
         }
 
         parseDebugsEnabled();
 
         main.configUtils.load();
-        main.playerLevellingMinRelevelTime = main.helperSettings.getInt(main.settingsCfg, "player-levelling-relevel-min-time", 5000);
+        main.playerLevellingMinRelevelTime = main.helperSettings.getIntTimeUnitMS(main.settingsCfg,
+            "player-levelling-relevel-min-time", 5000L);
+        this.useAdventure = main.helperSettings.getBoolean(main.settingsCfg, "use-adventure", true);
 
         return true;
     }
 
-    private void parseDebugsEnabled(){
+    private void parseDebugsEnabled() {
         this.debugsEnabled.clear();
 
-        final List<String> debugsEnabled = main.settingsCfg.getStringList(main.helperSettings.getKeyNameFromConfig(main.settingsCfg, "debug-misc"));
-        if (debugsEnabled.isEmpty()) return;
+        final List<String> debugsEnabled = main.settingsCfg.getStringList(
+            main.helperSettings.getKeyNameFromConfig(main.settingsCfg, "debug-misc"));
+        if (debugsEnabled.isEmpty()) {
+            return;
+        }
 
-        for (final String debug : debugsEnabled){
-            if (Utils.isNullOrEmpty(debug)) continue;
+        for (final String debug : debugsEnabled) {
+            if (Utils.isNullOrEmpty(debug)) {
+                continue;
+            }
 
             try {
                 final DebugType debugType = DebugType.valueOf(debug.toUpperCase());
@@ -213,15 +226,18 @@ public class Companion {
             }
         }
 
-        if (!this.debugsEnabled.isEmpty())
+        if (!this.debugsEnabled.isEmpty()) {
             Utils.logger.info("debug-misc items enabled: &b" + this.debugsEnabled);
+        }
     }
 
     @Nullable
     private YamlConfiguration loadEmbeddedResource(final String filename) {
         YamlConfiguration result = null;
         final InputStream inputStream = main.getResource(filename);
-        if (inputStream == null) return null;
+        if (inputStream == null) {
+            return null;
+        }
 
         try {
             final InputStreamReader reader = new InputStreamReader(inputStream);
@@ -239,10 +255,11 @@ public class Companion {
         Utils.logger.info("&fListeners: &7Registering event listeners...");
 
         main.levelManager = new LevelManager(main);
-        main._mobsQueueManager.start();
-        main.nametagQueueManager_.start();
+        main.mobsQueueManager.start();
+        main.nametagQueueManager.start();
         main.levelManager.entitySpawnListener = new EntitySpawnListener(main);
-        main.levelManager.entitySpawnListener.processMobSpawns = main.helperSettings.getBoolean(main.settingsCfg, "level-mobs-upon-spawn", true);
+        main.levelManager.entitySpawnListener.processMobSpawns = main.helperSettings.getBoolean(
+            main.settingsCfg, "level-mobs-upon-spawn", true);
         main.entityDamageDebugListener = new EntityDamageDebugListener(main);
         main.blockPlaceListener = new BlockPlaceListener(main);
 
@@ -265,6 +282,7 @@ public class Companion {
         pluginManager.registerEvents(new CombustListener(main), main);
         pluginManager.registerEvents(main.blockPlaceListener, main);
         pluginManager.registerEvents(new PlayerPortalEventListener(main), main);
+        pluginManager.registerEvents(new ServerStartListener(main), main);
         main.chunkLoadListener = new ChunkLoadListener(main);
         main.playerInteractEventListener = new PlayerInteractEventListener(main);
         pluginManager.registerEvents(main.playerInteractEventListener, main);
@@ -274,8 +292,10 @@ public class Companion {
             main.placeholderApiIntegration.register();
         }
 
-        if (main.helperSettings.getBoolean(main.settingsCfg,"ensure-mobs-are-levelled-on-chunk-load", true))
+        if (main.helperSettings.getBoolean(main.settingsCfg,
+            "ensure-mobs-are-levelled-on-chunk-load", true)) {
             pluginManager.registerEvents(main.chunkLoadListener, main);
+        }
     }
 
     void registerCommands() {
@@ -283,10 +303,12 @@ public class Companion {
 
         main.levelledMobsCommand = new LevelledMobsCommand(main);
         final PluginCommand levelledMobsCommand = main.getCommand("levelledmobs");
-        if (levelledMobsCommand == null)
-            Utils.logger.error("Command &b/levelledmobs&7 is unavailable, is it not registered in plugin.yml?");
-        else
+        if (levelledMobsCommand == null) {
+            Utils.logger.error(
+                "Command &b/levelledmobs&7 is unavailable, is it not registered in plugin.yml?");
+        } else {
             levelledMobsCommand.setExecutor(main.levelledMobsCommand);
+        }
     }
 
     void setupMetrics() {
@@ -294,22 +316,164 @@ public class Companion {
 
         metrics.addCustomChart(new SimplePie("maxlevel_used", metricsInfo::getMaxLevelRange));
         metrics.addCustomChart(new SimplePie("custom_rules_used", metricsInfo::getCustomRulesUsed));
-        metrics.addCustomChart(new SimplePie("custom_drops_enabled", metricsInfo::getUsesCustomDrops));
-        metrics.addCustomChart(new SimplePie("health_indicator_enabled", metricsInfo::getUsesHealthIndicator));
-        metrics.addCustomChart(new SimplePie("levelling_strategy", metricsInfo::getLevellingStrategy));
-        metrics.addCustomChart(new SimplePie("autoupdate_checker_enabled", metricsInfo::usesAutoUpdateChecker));
-        metrics.addCustomChart(new SimplePie("level_mobs_upon_spawn", metricsInfo::levelMobsUponSpawn));
-        metrics.addCustomChart(new SimplePie("check_mobs_on_chunk_load", metricsInfo::checkMobsOnChunkLoad));
-        metrics.addCustomChart(new SimplePie("custom-entity-names", metricsInfo::customEntityNamesCount));
+        metrics.addCustomChart(
+            new SimplePie("custom_drops_enabled", metricsInfo::getUsesCustomDrops));
+        metrics.addCustomChart(
+            new SimplePie("health_indicator_enabled", metricsInfo::getUsesHealthIndicator));
+        metrics.addCustomChart(
+            new SimplePie("levelling_strategy", metricsInfo::getLevellingStrategy));
+        metrics.addCustomChart(
+            new SimplePie("autoupdate_checker_enabled", metricsInfo::usesAutoUpdateChecker));
+        metrics.addCustomChart(
+            new SimplePie("level_mobs_upon_spawn", metricsInfo::levelMobsUponSpawn));
+        metrics.addCustomChart(
+            new SimplePie("check_mobs_on_chunk_load", metricsInfo::checkMobsOnChunkLoad));
+        metrics.addCustomChart(
+            new SimplePie("custom-entity-names", metricsInfo::customEntityNamesCount));
         metrics.addCustomChart(new SimplePie("utilizes-nbtdata", metricsInfo::usesNbtData));
-        metrics.addCustomChart(new SimplePie("utilizes_player_levelling", metricsInfo::usesPlayerLevelling));
+        metrics.addCustomChart(
+            new SimplePie("utilizes_player_levelling", metricsInfo::usesPlayerLevelling));
         metrics.addCustomChart(new SimplePie("nametag_visibility", metricsInfo::nametagVisibility));
-        metrics.addCustomChart(new SimpleBarChart("enabled-compatibility", metricsInfo::enabledCompats));
+        metrics.addCustomChart(
+            new SimpleBarChart("enabled-compatibility", metricsInfo::enabledCompats));
+    }
+
+    void startCleanupTask() {
+        this.hashMapCleanUp = new BukkitRunnable() {
+            @Override
+            public void run() {
+                synchronized (entityDeathInChunkCounterLock) {
+                    chunkKillLimitCleanup();
+                }
+                synchronized (entityDeathInChunkNotifierLock) {
+                    chunkKillNoticationCleanup();
+                }
+            }
+        }.runTaskTimerAsynchronously(main, 100, 40);
+    }
+
+    private void chunkKillLimitCleanup() {
+        final List<Long> chunkKeysToRemove = new LinkedList<>();
+
+        for (final long chunkKey : entityDeathInChunkCounter.keySet()) {
+            //                                 Cooldown time, entity counts
+            final Map<EntityType, ChunkKillInfo> pairList = entityDeathInChunkCounter.get(chunkKey);
+
+            if (pairList == null) {
+                continue;
+            }
+            final Instant now = Instant.now();
+
+            for (final EntityType entityType : pairList.keySet()) {
+                final ChunkKillInfo chunkKillInfo = pairList.get(entityType);
+
+                chunkKillInfo.getEntrySet().removeIf(
+                    e -> e.getKey().compareTo(now.minusSeconds(e.getValue())) < 0
+                );
+            }
+
+            pairList.entrySet().removeIf(e -> e.getValue().isEmpty());
+
+            if (pairList.isEmpty()) {
+                // Remove the object to prevent iterate over exceed amount of empty pairList
+                chunkKeysToRemove.add(chunkKey);
+            }
+        }
+
+        for (final long chunkKey : chunkKeysToRemove) {
+            entityDeathInChunkCounter.remove(chunkKey);
+        }
+    }
+
+    private void chunkKillNoticationCleanup() {
+        final Iterator<Long> iterator = this.chunkKillNoticationTracker.keySet().iterator();
+
+        while (iterator.hasNext()) {
+            final long chunkKey = iterator.next();
+            final Map<UUID, Instant> playerTimestamps = this.chunkKillNoticationTracker.get(
+                chunkKey);
+            playerTimestamps.entrySet()
+                .removeIf(e -> Duration.between(e.getValue(), Instant.now()).toSeconds() > 30L);
+
+            if (playerTimestamps.isEmpty()) {
+                iterator.remove();
+            }
+        }
+    }
+
+    @NotNull
+    public Map<EntityType, ChunkKillInfo> getorAddPairForSpecifiedChunk(final long chunkKey) {
+        synchronized (entityDeathInChunkCounterLock) {
+            return this.entityDeathInChunkCounter.computeIfAbsent(chunkKey, k -> new HashMap<>());
+        }
+    }
+
+    @NotNull
+    public List<Map<EntityType, ChunkKillInfo>> getorAddPairForSpecifiedChunks(
+        final @NotNull List<Long> chunkKeys) {
+        final List<Map<EntityType, ChunkKillInfo>> results = new ArrayList<>(chunkKeys.size());
+
+        synchronized (entityDeathInChunkCounterLock) {
+            for (final long chunkKey : chunkKeys) {
+                results.add(
+                    this.entityDeathInChunkCounter.computeIfAbsent(chunkKey, k -> new HashMap<>()));
+            }
+        }
+
+        return results;
+    }
+
+    public boolean doesUserHaveCooldown(final @NotNull List<Long> chunkKeys,
+        final @NotNull UUID userId) {
+        final List<Map<UUID, Instant>> chunkInfos = new LinkedList<>();
+
+        synchronized (entityDeathInChunkNotifierLock) {
+            for (final long chunkKey : chunkKeys) {
+                if (this.chunkKillNoticationTracker.containsKey(chunkKey)) {
+                    chunkInfos.add(this.chunkKillNoticationTracker.get(chunkKey));
+                }
+            }
+        }
+
+        if (chunkInfos.isEmpty()) {
+            return false;
+        }
+
+        for (final Map<UUID, Instant> chunkInfo : chunkInfos) {
+            if (chunkInfo == null || !chunkInfo.containsKey(userId)) {
+                continue;
+            }
+            final Instant instant = chunkInfo.get(userId);
+            if (Duration.between(instant, Instant.now()).toSeconds() <= 30L) {
+                return true;
+            }
+        }
+
+        return false;
+    }
+
+    public void addUserCooldown(final @NotNull List<Long> chunkKeys, final @NotNull UUID userId) {
+        synchronized (entityDeathInChunkNotifierLock) {
+            for (final long chunkKey : chunkKeys) {
+                final Map<UUID, Instant> entry = this.chunkKillNoticationTracker.computeIfAbsent(
+                    chunkKey, k -> new HashMap<>());
+                entry.put(userId, Instant.now());
+            }
+        }
+    }
+
+    public void clearChunkKillCache() {
+        synchronized (entityDeathInChunkCounterLock) {
+            this.entityDeathInChunkCounter.clear();
+        }
+        synchronized (entityDeathInChunkNotifierLock) {
+            this.chunkKillNoticationTracker.clear();
+        }
     }
 
     //Check for updates on the Spigot page.
     void checkUpdates() {
-        if (main.helperSettings.getBoolean(main.settingsCfg,"use-update-checker", true)) {
+        if (main.helperSettings.getBoolean(main.settingsCfg, "use-update-checker", true)) {
             final UpdateChecker updateChecker = new UpdateChecker(main, 74304);
             try {
                 updateChecker.getLatestVersion(latestVersion -> {
@@ -327,18 +491,21 @@ public class Companion {
                         isOutOfDate = (thisVersion.compareTo(spigotVersion) < 0);
                         isNewerVersion = (thisVersion.compareTo(spigotVersion) > 0);
                     } catch (final InvalidObjectException e) {
-                        Utils.logger.warning("Got exception creating version objects: " + e.getMessage());
+                        Utils.logger.warning(
+                            "Got exception creating version objects: " + e.getMessage());
 
                         isOutOfDate = !currentVersion.equals(latestVersion);
                         isNewerVersion = currentVersion.contains("indev");
                     }
 
                     if (isNewerVersion) {
-                        updateResult = Collections.singletonList(
-                                "&7Your &bLevelledMobs&7 version is &ba pre-release&7. Latest release version is &bv%latestVersion%&7. &8(&7You're running &bv%currentVersion%&8)");
+                        updateResult = List.of(
+                            "&7Your &bLevelledMobs&7 version is &ba pre-release&7. Latest release version is &bv%latestVersion%&7. &8(&7You're running &bv%currentVersion%&8)");
 
-                        updateResult = Utils.replaceAllInList(updateResult, "%currentVersion%", currentVersion);
-                        updateResult = Utils.replaceAllInList(updateResult, "%latestVersion%", latestVersion);
+                        updateResult = Utils.replaceAllInList(updateResult, "%currentVersion%",
+                            currentVersion);
+                        updateResult = Utils.replaceAllInList(updateResult, "%latestVersion%",
+                            latestVersion);
                         updateResult = Utils.colorizeAllInList(updateResult);
 
                         updateResult.forEach(Utils.logger::warning);
@@ -346,25 +513,32 @@ public class Companion {
 
                         // for some reason config#getStringList doesn't allow defaults??
                         if (main.messagesCfg.contains("other.update-notice.messages")) {
-                            updateResult = main.messagesCfg.getStringList("other.update-notice.messages");
+                            updateResult = main.messagesCfg.getStringList(
+                                "other.update-notice.messages");
                         } else {
                             updateResult = List.of(
-                                    "&b&nLevelledMobs Update Checker Notice:",
-                                    "&7Your &bLevelledMobs&7 version is &boutdated&7! Please update to" +
-                                            "&bv%latestVersion%&7 as soon as possible. &8(&7You''re running &bv%currentVersion%&8)");
+                                "&b&nLevelledMobs Update Checker Notice:",
+                                "&7Your &bLevelledMobs&7 version is &boutdated&7! Please update to"
+                                    +
+                                    "&bv%latestVersion%&7 as soon as possible. &8(&7You''re running &bv%currentVersion%&8)");
                         }
 
-                        updateResult = Utils.replaceAllInList(updateResult, "%currentVersion%", currentVersion);
-                        updateResult = Utils.replaceAllInList(updateResult, "%latestVersion%", latestVersion);
+                        updateResult = Utils.replaceAllInList(updateResult, "%currentVersion%",
+                            currentVersion);
+                        updateResult = Utils.replaceAllInList(updateResult, "%latestVersion%",
+                            latestVersion);
                         updateResult = Utils.colorizeAllInList(updateResult);
 
-                        if (main.messagesCfg.getBoolean("other.update-notice.send-in-console", true))
+                        if (main.messagesCfg.getBoolean("other.update-notice.send-in-console",
+                            true)) {
                             updateResult.forEach(Utils.logger::warning);
+                        }
 
                         // notify any players that may be online already
                         if (main.messagesCfg.getBoolean("other.update-notice.send-on-join", true)) {
                             Bukkit.getOnlinePlayers().forEach(onlinePlayer -> {
-                                if (onlinePlayer.hasPermission("levelledmobs.receive-update-notifications")) {
+                                if (onlinePlayer.hasPermission(
+                                    "levelledmobs.receive-update-notifications")) {
                                     for (final String msg : updateResult) {
                                         onlinePlayer.sendMessage(msg);
                                     }
@@ -374,8 +548,7 @@ public class Companion {
                         }
                     }
                 });
-            }
-            catch (final OutdatedServerVersionException e){
+            } catch (final OutdatedServerVersionException e) {
                 e.printStackTrace();
             }
         }
@@ -383,88 +556,106 @@ public class Companion {
 
     void shutDownAsyncTasks() {
         Utils.logger.info("&fTasks: &7Shutting down other async tasks...");
-        main._mobsQueueManager.stop();
-        main.nametagQueueManager_.stop();
+        main.mobsQueueManager.stop();
+        main.nametagQueueManager.stop();
+        if (hashMapCleanUp != null) {
+            hashMapCleanUp.cancel();
+        }
         Bukkit.getScheduler().cancelTasks(main);
     }
 
-    private void buildUniversalGroups(){
+    private void buildUniversalGroups() {
 
         // include interfaces: Monster, Boss
-        groups_HostileMobs = Stream.of(
-                EntityType.ENDER_DRAGON,
-                EntityType.GHAST,
-                EntityType.MAGMA_CUBE,
-                EntityType.PHANTOM,
-                EntityType.SHULKER,
-                EntityType.SLIME
+        hostileMobsGroup = Stream.of(
+            EntityType.ENDER_DRAGON,
+            EntityType.GHAST,
+            EntityType.MAGMA_CUBE,
+            EntityType.PHANTOM,
+            EntityType.SHULKER,
+            EntityType.SLIME
         ).collect(Collectors.toCollection(HashSet::new));
 
-        if (VersionUtils.isOneSeventeen() || VersionUtils.isOneSixteen())
-            groups_HostileMobs.addAll(Compat1_16.getHostileMobs());
+        if (VersionUtils.isOneSeventeen() || VersionUtils.isOneSixteen()) {
+            hostileMobsGroup.addAll(Compat1_16.getHostileMobs());
+        }
 
         // include interfaces: Animals, WaterMob
-        groups_PassiveMobs = Stream.of(
-                EntityType.IRON_GOLEM,
-                EntityType.SNOWMAN
+        passiveMobsGroup = Stream.of(
+            EntityType.IRON_GOLEM,
+            EntityType.SNOWMAN
         ).collect(Collectors.toCollection(HashSet::new));
 
-        if (VersionUtils.isOneSeventeen())
-            groups_PassiveMobs.addAll(Compat1_17.getPassiveMobs());
+        if (VersionUtils.isOneSeventeen()) {
+            passiveMobsGroup.addAll(Compat1_17.getPassiveMobs());
+        }
+        if (main.nametagQueueManager.nmsHandler.minecraftVersion >= 1.19) {
+            passiveMobsGroup.addAll(Compat1_19.getPassiveMobs());
+        }
 
-        if (VersionUtils.isOneSeventeen() || VersionUtils.isOneSixteen())
-            groups_HostileMobs.addAll(Compat1_16.getPassiveMobs());
+        if (main.nametagQueueManager.nmsHandler.minecraftVersion >= 1.16) {
+            hostileMobsGroup.addAll(Compat1_16.getHostileMobs());
+        }
+        if (main.nametagQueueManager.nmsHandler.minecraftVersion >= 1.19) {
+            hostileMobsGroup.addAll(Compat1_19.getHostileMobs());
+        }
 
         // include interfaces: WaterMob
-        groups_AquaticMobs = Stream.of(
-                EntityType.DROWNED,
-                EntityType.ELDER_GUARDIAN,
-                EntityType.GUARDIAN,
-                EntityType.TURTLE
+        aquaticMobsGroup = Stream.of(
+            EntityType.DROWNED,
+            EntityType.ELDER_GUARDIAN,
+            EntityType.GUARDIAN,
+            EntityType.TURTLE
         ).collect(Collectors.toCollection(HashSet::new));
+
+        if (main.nametagQueueManager.nmsHandler.minecraftVersion >= 1.19) {
+            aquaticMobsGroup.addAll(Compat1_19.getAquaticMobs());
+        }
     }
 
-    public void addRecentlyJoinedPlayer(final Player player){
-        synchronized (playerLogonTimes_Lock){
+    public void addRecentlyJoinedPlayer(final Player player) {
+        synchronized (playerLogonTimesLock) {
             recentlyJoinedPlayers.put(player, Instant.now());
         }
     }
 
     @Nullable
-    public Instant getRecentlyJoinedPlayerLogonTime(final Player player){
-        synchronized (playerLogonTimes_Lock){
+    public Instant getRecentlyJoinedPlayerLogonTime(final Player player) {
+        synchronized (playerLogonTimesLock) {
             return recentlyJoinedPlayers.get(player);
         }
     }
 
-    public void removeRecentlyJoinedPlayer(final Player player){
-        synchronized (playerLogonTimes_Lock){
+    public void removeRecentlyJoinedPlayer(final Player player) {
+        synchronized (playerLogonTimesLock) {
             recentlyJoinedPlayers.remove(player);
         }
     }
 
     @Nullable
-    public Location getPlayerNetherPortalLocation(final @NotNull Player player){
-        synchronized (playerNetherPortals_Lock){
+    public Location getPlayerNetherPortalLocation(final @NotNull Player player) {
+        synchronized (playerNetherPortalsLock) {
             return playerNetherPortals.get(player);
         }
     }
 
-    public void setPlayerNetherPortalLocation(final @NotNull Player player, final @Nullable Location location){
-        synchronized (playerNetherPortals_Lock){
+    public void setPlayerNetherPortalLocation(final @NotNull Player player,
+        final @Nullable Location location) {
+        synchronized (playerNetherPortalsLock) {
             playerNetherPortals.put(player, location);
         }
     }
 
     @Nullable
-    public Location getPlayerWorldPortalLocation(final @NotNull Player player){
-        synchronized (playerNetherPortals_Lock){
+    public Location getPlayerWorldPortalLocation(final @NotNull Player player) {
+        synchronized (playerNetherPortalsLock) {
             return playerWorldPortals.get(player);
         }
     }
 
-    public void setPlayerWorldPortalLocation(final @NotNull Player player, final @Nullable Location location){
-        synchronized (playerNetherPortals_Lock){
+    public void setPlayerWorldPortalLocation(final @NotNull Player player,
+        final @Nullable Location location) {
+        synchronized (playerNetherPortalsLock) {
             playerWorldPortals.put(player, location);
         }
     }
